fix experiencinator NPE, do not refresh layout on main thread (#4719)